--- a/Natours/starter/package.json
+++ b/Natours/starter/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile:sass": "node-sass sass/main.scss css/style.css"
+    "compile:sass": "node-sass sass/main.scss css/style.css -w",
+    "watch-css": "nodemon -e scss -x \"npm run compile:sass\""
   },
   "author": "chang",
   "license": "ISC",
