--- a/Natours/starter/package.json
+++ b/Natours/starter/package.json
@@ -5,12 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile:sass": "node-sass sass/main.scss css/style.css",
-    "watch-css": "nodemon -e scss -x \"npm run compile:sass\""
+    "dev-server": "live-server",
+    "start": "npm-run-all --parallel dev-server watch:sass",
+    "watch:sass": "node-sass sass/main.scss css/style.css",
+    "watch-css": "nodemon -e scss -x \"npm run watch:sass\"",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" css/style.concat.css -o css/style.prefix.css",
+    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "author": "chang",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^4.9.2"
+    "autoprefixer": "^9.0.1",
+    "concat": "^1.0.3",
+    "node-sass": "^4.9.2",
+    "npm-run-all": "^4.1.3",
+    "postcss-cli": "^6.0.0"
   }
 }
